--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <link itemprop="thumbnailUrl" href="assets/images/logo.png"> 
     <span itemprop="thumbnail" itemscope itemtype="http://schema.org/ImageObject"> <link itemprop="url" href="assets/images/logo.png"> </span>
     <meta property="og:title" content="MATAF TI 2023">
-    <meta property="og:description" content="MATAF TI 2023">
+    <meta property="og:description" content="Official Website MATAF TI 2023">
 
     
     <meta name="keywords" content="Official Website MATAF TI-2023" />
