--- a/index.html
+++ b/index.html
@@ -5,8 +5,8 @@
     <title>MATAF TI | Home</title>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta property="og:image" content="assets/images/logo.png">
-    <link itemprop="thumbnailUrl" href="assets/images/logo.png"> 
+    <meta property="og:image" content="assets/images/favicon.png">
+    <link itemprop="thumbnailUrl" href="assets/images/favicon.png"> 
     <span itemprop="thumbnail" itemscope itemtype="http://schema.org/ImageObject"> <link itemprop="url" href="assets/images/logo.png"> </span>
     <meta property="og:title" content="MATAF TI 2023">
     <meta property="og:description" content="Official Website MATAF TI 2023">
