--- a/index.html
+++ b/index.html
@@ -8,6 +8,8 @@
     <meta property="og:image" content="assets/images/favicon.png">
     <link itemprop="thumbnailUrl" href="assets/images/favicon.png"> 
     <span itemprop="thumbnail" itemscope itemtype="http://schema.org/ImageObject"> <link itemprop="url" href="assets/images/logo.png"> </span>
+    <link itemprop="image" src="assets/images/logo.png" style="display: none"> 
+
     
     <meta name="keywords" content="Official Website MATAF TI-2023" />
     <meta name="description" content="Official Website MATAF TI-2023." />
