--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
     <link itemprop="thumbnailUrl" href="assets/images/favicon.png"> 
     <span itemprop="thumbnail" itemscope itemtype="http://schema.org/ImageObject"> <link itemprop="url" href="assets/images/logo.png"> </span>
     <link itemprop="image" src="assets/images/logo.png" style="display: none"> 
+    <meta property="og:image" content="assets/images/logo.png">
 
     
     <meta name="keywords" content="Official Website MATAF TI-2023" />
