--- a/about.html
+++ b/about.html
@@ -111,12 +111,14 @@
                     <h2>ABOUT</h2>
                     <div class="container reference-upper reference-container pt-5" style="width: 100%; min-height: 80%;">
                         <div class="contener"> 
-                            <iframe allowfullscreen="" scrolling="no" class="fp-iframe" style="border: 1px solid lightgray; width: 100%; height: 400px;" src="https://heyzine.com/flip-book/25aac4d3d5.html"></iframe>                                             
+			
+                            <iframe allowfullscreen="" scrolling="no" class="fp-iframe" style="border: 1px solid lightgray; width: 100%; height: 400px;" src="https://heyzine.com/flip-book/5ed5b64712.html"></iframe>
+                                                                    
                         </div>
                     </div>
                 </div>
                 <div class="div_quote">
-                    <p>“Inovation Make Sensation To Digitalization”</p>
+                    <p>“TRANSFORMASI DIGITAL UNTUK MASA DEPAN YANG LEBIH CERDAS”</p>
                 </div>
             </div>
 
